--- a/src/app/modules/decks/filter/card-filter/card-filter.component.html
+++ b/src/app/modules/decks/filter/card-filter/card-filter.component.html
@@ -1,12 +1,16 @@
 <ng-container *transloco="let t; read: 'filters'">
   <ng-template #cryptTemplate let-r="result" let-t="term">
     <i class="vtes" [class]="r['clanIcon']"></i>
-    <i class="vtes advanced" *ngIf="r.adv"></i>
+    @if(r.adv){
+    <i class="vtes advanced"></i>
+    }
     <ngb-highlight class="align-top ms-1" [result]="r.i18n?.name || r.name" [term]="t"></ngb-highlight>
   </ng-template>
 
   <ng-template #libraryTemplate let-r="result" let-t="term">
-    <i class="vtes" [class]="typeIcon" *ngFor="let typeIcon of r['typeIcons']"></i>
+    @for(typeIcon of r['typeIcons']; track typeIcon){
+    <i class="vtes" [class]="typeIcon"></i>
+    }
     <ngb-highlight class="align-top ms-2" [result]="r.i18n?.name || r.name" [term]="t"></ngb-highlight>
   </ng-template>
 
@@ -17,52 +21,58 @@
         [resultTemplate]="cryptTemplate" [inputFormatter]="formatter" [editable]="false"
         (selectItem)="selectCryptItem($event, cryptInput)" />
     </div>
-    <ng-container *ngFor="let card of cards">
-      <div class="col-12 mt-2 d-flex flex-row align-items-center" *ngIf="getCrypt(card.id) | async as crypt">
-        <div class="btn-group btn-group-sm me-2" role="optgroup" [attr.aria-label]="t('number_of_copies')">
-          <button *ngIf="card.count > 1" type="button" class="btn btn-outline-primary"
-            (click)="decreaseCopies(card.id)">
-            <i class="bi bi-dash-lg" aria-hidden="true"></i>
-          </button>
-          <button *ngIf="card.count === 1" type="button" class="btn btn-outline-danger"
-            (click)="decreaseCopies(card.id)">
-            <i class="bi bi-trash" aria-hidden="true"></i>
-          </button>
-          <button type="button" disabled="true" class="btn btn-outline-primary">
-            {{ card.count }}
-          </button>
-          <button type="button" class="btn btn-outline-primary" (click)="increaseCopies(card.id)">
-            <i class="bi bi-plus-lg" aria-hidden="true"></i>
-          </button>
-        </div>
-        <ng-template #imgPopover>
-          @if( crypt.i18n && crypt.i18n.image ){
-          <img #i18nImage [ngClass]="{
+    @for(card of cards; track card.id){
+    @if(getCrypt(card.id) | async; as crypt){
+    <div class="col-12 mt-2 d-flex flex-row align-items-center">
+      <div class="btn-group btn-group-sm me-2" role="optgroup" [attr.aria-label]="t('number_of_copies')">
+        @if(card.count > 1){
+        <button type="button" class="btn btn-outline-primary" (click)="decreaseCopies(card.id)">
+          <i class="bi bi-dash-lg" aria-hidden="true"></i>
+        </button>
+        }
+        @if(card.count === 1){
+        <button type="button" class="btn btn-outline-danger" (click)="decreaseCopies(card.id)">
+          <i class="bi bi-trash" aria-hidden="true"></i>
+        </button>
+        }
+        <button type="button" disabled="true" class="btn btn-outline-primary">
+          {{ card.count }}
+        </button>
+        <button type="button" class="btn btn-outline-primary" (click)="increaseCopies(card.id)">
+          <i class="bi bi-plus-lg" aria-hidden="true"></i>
+        </button>
+      </div>
+      <ng-template #imgPopover>
+        @if( crypt.i18n && crypt.i18n.image ){
+        <img #i18nImage [ngClass]="{
           'img-popover': !(isMobile$ | async)!,
           'img-popover-mobile': (isMobile$ | async)!
         }" [src]="'/assets' + crypt.i18n.image" [alt]="crypt.i18n.name"
-            (error)="i18nImage.src='/assets' + crypt.image" />
-          }
-          @else{
-          <img [ngClass]="{
+          (error)="i18nImage.src='/assets' + crypt.image" />
+        }
+        @else{
+        <img [ngClass]="{
           'img-popover': !(isMobile$ | async)!,
           'img-popover-mobile': (isMobile$ | async)!
         }" [src]="'/assets' + crypt.image" [alt]="crypt.name" />
-          }
-        </ng-template>
-        <i class="vtes" [class]="crypt.clanIcon"></i>
-        <i class="vtes advanced" *ngIf="crypt.adv"></i>
-        <span #popover="ngbPopover" class="text-primary ms-1" value="name" [ngbPopover]="imgPopover"
-          triggers="mouseenter:mouseleave" (click)="popover.open()">
-          @if( crypt.i18n && crypt.i18n.name !== crypt.name ){
-          {{ crypt.i18n.name }}
-          }
-          @else{
-          {{ crypt.name }}
-          }
-        </span>
-      </div>
-    </ng-container>
+        }
+      </ng-template>
+      <i class="vtes" [class]="crypt.clanIcon"></i>
+      @if(crypt.adv){
+      <i class="vtes advanced"></i>
+      }
+      <span #popover="ngbPopover" class="text-primary ms-1" value="name" [ngbPopover]="imgPopover"
+        triggers="mouseenter:mouseleave" (click)="popover.open()">
+        @if( crypt.i18n && crypt.i18n.name !== crypt.name ){
+        {{ crypt.i18n.name }}
+        }
+        @else{
+        {{ crypt.name }}
+        }
+      </span>
+    </div>
+    }
+    }
     @if(showStarVampireFilter){
     <form [formGroup]="form">
       <div class="form-check form-switch d-inline-block ms-2 mt-2">
@@ -80,50 +90,56 @@
         [resultTemplate]="libraryTemplate" [inputFormatter]="formatter" [editable]="false"
         (selectItem)="selectLibraryItem($event, libraryInput)" />
     </div>
-    <ng-container *ngFor="let card of cards">
-      <div class="col-12 mt-2 d-flex flex-row align-items-center" *ngIf="getLibrary(card.id) | async as library">
-        <div class="btn-group btn-group-sm me-2" role="optgroup" [attr.aria-label]="t('number_of_copies')">
-          <button *ngIf="card.count > 1" type="button" class="btn btn-outline-primary"
-            (click)="decreaseCopies(card.id)">
-            <i class="bi bi-dash-lg" aria-hidden="true"></i>
-          </button>
-          <button *ngIf="card.count === 1" type="button" class="btn btn-outline-danger"
-            (click)="decreaseCopies(card.id)">
-            <i class="bi bi-trash" aria-hidden="true"></i>
-          </button>
-          <button type="button" disabled="true" class="btn btn-outline-primary">
-            {{ card.count }}
-          </button>
-          <button type="button" class="btn btn-outline-primary" (click)="increaseCopies(card.id)">
-            <i class="bi bi-plus-lg" aria-hidden="true"></i>
-          </button>
-        </div>
-        <ng-template #imgPopover>
-          @if( library.i18n && library.i18n.image ){
-          <img #i18nImage [ngClass]="{
+    @for(card of cards; track card.id){
+    @if(getLibrary(card.id) | async; as library){
+    <div class="col-12 mt-2 d-flex flex-row align-items-center">
+      <div class="btn-group btn-group-sm me-2" role="optgroup" [attr.aria-label]="t('number_of_copies')">
+        @if(card.count > 1){
+        <button type="button" class="btn btn-outline-primary" (click)="decreaseCopies(card.id)">
+          <i class="bi bi-dash-lg" aria-hidden="true"></i>
+        </button>
+        }
+        @if(card.count === 1){
+        <button type="button" class="btn btn-outline-danger" (click)="decreaseCopies(card.id)">
+          <i class="bi bi-trash" aria-hidden="true"></i>
+        </button>
+        }
+        <button type="button" disabled="true" class="btn btn-outline-primary">
+          {{ card.count }}
+        </button>
+        <button type="button" class="btn btn-outline-primary" (click)="increaseCopies(card.id)">
+          <i class="bi bi-plus-lg" aria-hidden="true"></i>
+        </button>
+      </div>
+      <ng-template #imgPopover>
+        @if( library.i18n && library.i18n.image ){
+        <img #i18nImage [ngClass]="{
       'img-popover': !(isMobile$ | async)!,
       'img-popover-mobile': (isMobile$ | async)!
     }" [src]="'/assets' + library.i18n.image" [alt]="library.i18n.name"
-            (error)="i18nImage.src='/assets' + library.image" />
-          }
-          @else{
-          <img [ngClass]="{
+          (error)="i18nImage.src='/assets' + library.image" />
+        }
+        @else{
+        <img [ngClass]="{
       'img-popover': !(isMobile$ | async)!,
       'img-popover-mobile': (isMobile$ | async)!
     }" [src]="'/assets' + library.image" [alt]="library.name" />
-          }
-        </ng-template>
-        <i class="vtes" [class]="typeIcon" *ngFor="let typeIcon of library.typeIcons"></i>
-        <span #popover="ngbPopover" class="text-primary ms-1" value="name" [ngbPopover]="imgPopover"
-          triggers="mouseenter:mouseleave" (click)="popover.open()">
-          @if( library.i18n && library.i18n.name !== library.name ){
-          {{ library.i18n.name }}
-          }
-          @else{
-          {{ library.name }}
-          }
-        </span>
-      </div>
-    </ng-container>
+        }
+      </ng-template>
+      @for(typeIcon of library.typeIcons; track typeIcon){
+      <i class="vtes" [class]="typeIcon"></i>
+      }
+      <span #popover="ngbPopover" class="text-primary ms-1" value="name" [ngbPopover]="imgPopover"
+        triggers="mouseenter:mouseleave" (click)="popover.open()">
+        @if( library.i18n && library.i18n.name !== library.name ){
+        {{ library.i18n.name }}
+        }
+        @else{
+        {{ library.name }}
+        }
+      </span>
+    </div>
+    }
+    }
   </div>
 </ng-container>
